--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
          <div class="row banner">
             <div class="banner-text">
                <h1 class="responsive-headline">I'm Khoir Afandi.</h1>
-               <h3>Hi saya Khoir Afandi <span>Front-end web Development</span>, and <span>web
+               <h3>Hi saya Khoir Afandi <span>Web Development</span>, and <span>web
                      designer </span>Saya sangat tetarik dengan hal-hal baru dalam bidang
                   teknologi terutama pada Web Development dan Desain.</h3>
                <hr />
