--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                <h2>About Me</h2>
 
-               <p>perkenalkan nama saya Khoir Afandi saya seorang front end web development saya lulusan Universitas
+               <p>perkenalkan nama saya Khoir Afandi saya seorang web development saya lulusan Universitas
                   PGRI Semarang jurusan Infrmatika. Saya sangat tetarik dengan
                   hal-hal baru dalam bidang teknologi terutama pada Web Development dan Desain. Dan saya memiliki sifat
                   tanggung jawab dan
